tests/snapshots/tables/Admin API Tool/guestFiles - ID 133.xml.snap
---
source: src/main.rs
expression: output_content
---
<FieldCatalog>
	<UUID modifications="10" userName="Malte Bastian" accountName="Admin" timestamp="2024-02-18T17:38:30">E8B8BEF0-B085-4B8C-8C4E-4AAE636D4A1D</UUID>
	<BaseTableReference id="133" name="guestFiles"></BaseTableReference>
	<ObjectList membercount="7">
		<Field DefaultStyle="" id="1" name="ID" fieldtype="Normal" datatype="Number" comment="">
			<UUID modifications="5" userName="Malte Bastian" accountName="Admin" timestamp="2024-02-18T17:38:30">A105E40D-AF93-4A49-9FF6-A9505190E1A5</UUID>
			<AutoEnter type="SerialNumber" prohibitModification="True">
				<SerialNumber increment="1" generate="OnCreation"></SerialNumber>
			</AutoEnter>
			<Validation type="OnlyDuringDataEntry" allowOverride="True" notEmpty="False" unique="True" existing="False"></Validation>
			<Storage global="False" maxRepetitions="1">
				<LanguageReference name="English" id="21"></LanguageReference>
			</Storage>
		</Field>
		<Field DefaultStyle="" id="2" name="accountName" fieldtype="Normal" datatype="Text" comment="">
			<UUID modifications="2" userName="Malte Bastian" accountName="Admin" timestamp="2024-02-18T17:38:30">39349DA9-183A-4D03-B07C-B56BBE5F0550</UUID>
			<AutoEnter type="" prohibitModification="False"></AutoEnter>
			<Validation type="OnlyDuringDataEntry" allowOverride="True" notEmpty="False" unique="False" existing="False"></Validation>
			<Storage autoIndex="True" global="False" maxRepetitions="1">
				<LanguageReference name="English" id="21"></LanguageReference>
			</Storage>
		</Field>
		<Field DefaultStyle="" id="3" name="filename" fieldtype="Normal" datatype="Text" comment="">
			<UUID modifications="2" userName="Malte Bastian" accountName="Admin" timestamp="2024-02-18T17:38:30">6811299D-9E59-4760-83DB-4C22C34B0830</UUID>
			<AutoEnter type="" prohibitModification="False"></AutoEnter>
			<Validation type="OnlyDuringDataEntry" allowOverride="True" notEmpty="False" unique="False" existing="False"></Validation>
			<Storage autoIndex="True" global="False" maxRepetitions="1">
				<LanguageReference name="English" id="21"></LanguageReference>
			</Storage>
		</Field>
		<Field DefaultStyle="" id="4" name="privsetName" fieldtype="Normal" datatype="Text" comment="">
			<UUID modifications="2" userName="Malte Bastian" accountName="Admin" timestamp="2024-02-18T17:38:30">D5DBC2A0-9112-4BEE-B2D9-0986C4FC4B15</UUID>
			<AutoEnter type="" prohibitModification="False"></AutoEnter>
			<Validation type="OnlyDuringDataEntry" allowOverride="True" notEmpty="False" unique="False" existing="False"></Validation>
			<Storage autoIndex="True" global="False" maxRepetitions="1">
				<LanguageReference name="English" id="21"></LanguageReference>
			</Storage>
		</Field>
		<Field DefaultStyle="" id="5" name="id_guestFiles" fieldtype="Normal" datatype="Text" comment="">
			<UUID modifications="2" userName="Malte Bastian" accountName="Admin" timestamp="2024-02-18T17:38:30">ABE3F709-5140-4A9C-BB3E-9DEBA82A9672</UUID>
			<AutoEnter type="" prohibitModification="False"></AutoEnter>
			<Validation type="OnlyDuringDataEntry" allowOverride="True" notEmpty="False" unique="False" existing="False"></Validation>
			<Storage autoIndex="True" global="False" maxRepetitions="1">
				<LanguageReference name="English" id="21"></LanguageReference>
			</Storage>
		</Field>
		<Field DefaultStyle="" id="6" name="id_client" fieldtype="Normal" datatype="Text" comment="">
			<UUID modifications="2" userName="Malte Bastian" accountName="Admin" timestamp="2024-02-18T17:38:30">C264F3C8-6E61-4DD1-848D-E863589813F8</UUID>
			<AutoEnter type="" prohibitModification="False"></AutoEnter>
			<Validation type="OnlyDuringDataEntry" allowOverride="True" notEmpty="False" unique="False" existing="False"></Validation>
			<Storage autoIndex="True" global="False" maxRepetitions="1">
				<LanguageReference name="English" id="21"></LanguageReference>
			</Storage>
		</Field>
		<Field DefaultStyle="" id="7" name="ID_Server" fieldtype="Normal" datatype="Number" comment="">
			<UUID modifications="2" userName="Malte Bastian" accountName="Admin" timestamp="2024-02-18T17:38:30">2018784C-16D2-4914-8071-EEFF46F8BA3F</UUID>
			<AutoEnter type="" prohibitModification="False"></AutoEnter>
			<Validation type="OnlyDuringDataEntry" allowOverride="True" notEmpty="False" unique="False" existing="False"></Validation>
			<Storage global="False" maxRepetitions="1">
				<LanguageReference name="English" id="21"></LanguageReference>
			</Storage>
		</Field>
	</ObjectList>
</FieldCatalog>
