tests/snapshots/tables/Admin API Tool/plugins - ID 137.xml.snap
---
source: src/main.rs
expression: output_content
---
<FieldCatalog>
	<UUID modifications="6" userName="Mike Duncan" accountName="Admin" timestamp="2021-01-12T13:39:19">26D1FA77-388E-4A00-8786-64FD7325EA68</UUID>
	<BaseTableReference id="137" name="plugins"></BaseTableReference>
	<ObjectList membercount="7">
		<Field DefaultStyle="" id="6" name="ID" fieldtype="Normal" datatype="Number" comment="">
			<UUID modifications="1" userName="Mike Duncan" accountName="Admin" timestamp="2021-01-12T13:36:33">652B7D81-AA65-4162-B638-147010985C07</UUID>
			<AutoEnter type="SerialNumber" prohibitModification="True">
				<SerialNumber increment="1" generate="OnCreation"></SerialNumber>
			</AutoEnter>
			<Validation type="OnlyDuringDataEntry" allowOverride="True" notEmpty="False" unique="True" existing="False"></Validation>
			<Storage global="False" maxRepetitions="1">
				<LanguageReference name="English" id="21"></LanguageReference>
			</Storage>
		</Field>
		<Field DefaultStyle="" id="7" name="ID_Server" fieldtype="Normal" datatype="Number" comment="">
			<UUID modifications="1" userName="Mike Duncan" accountName="Admin" timestamp="2021-01-12T13:36:33">959F8DA9-8CF9-4504-8E8E-5843C9C4662A</UUID>
			<AutoEnter type="" prohibitModification="False"></AutoEnter>
			<Validation type="OnlyDuringDataEntry" allowOverride="True" notEmpty="False" unique="False" existing="False"></Validation>
			<Storage global="False" maxRepetitions="1">
				<LanguageReference name="English" id="21"></LanguageReference>
			</Storage>
		</Field>
		<Field DefaultStyle="" id="8" name="description" fieldtype="Normal" datatype="Text" comment="">
			<UUID modifications="1" userName="Mike Duncan" accountName="Admin" timestamp="2021-01-12T13:39:19">A87972F2-D292-4123-929F-FECA32FFD225</UUID>
			<AutoEnter type="" prohibitModification="False"></AutoEnter>
			<Validation type="OnlyDuringDataEntry" allowOverride="True" notEmpty="False" unique="False" existing="False"></Validation>
			<Storage autoIndex="True" global="False" maxRepetitions="1">
				<LanguageReference name="English" id="21"></LanguageReference>
			</Storage>
		</Field>
		<Field DefaultStyle="" id="9" name="enabled" fieldtype="Normal" datatype="Text" comment="">
			<UUID modifications="1" userName="Mike Duncan" accountName="Admin" timestamp="2021-01-12T13:39:19">D3142496-60CA-4975-BC18-102BE6340273</UUID>
			<AutoEnter type="" prohibitModification="False"></AutoEnter>
			<Validation type="OnlyDuringDataEntry" allowOverride="True" notEmpty="False" unique="False" existing="False"></Validation>
			<Storage autoIndex="True" global="False" maxRepetitions="1">
				<LanguageReference name="English" id="21"></LanguageReference>
			</Storage>
		</Field>
		<Field DefaultStyle="" id="10" name="filename" fieldtype="Normal" datatype="Text" comment="">
			<UUID modifications="1" userName="Mike Duncan" accountName="Admin" timestamp="2021-01-12T13:39:19">F0DA4986-AEA9-4752-BD08-9600F0CFD2F0</UUID>
			<AutoEnter type="" prohibitModification="False"></AutoEnter>
			<Validation type="OnlyDuringDataEntry" allowOverride="True" notEmpty="False" unique="False" existing="False"></Validation>
			<Storage autoIndex="True" global="False" maxRepetitions="1">
				<LanguageReference name="English" id="21"></LanguageReference>
			</Storage>
		</Field>
		<Field DefaultStyle="" id="11" name="id_plugin" fieldtype="Normal" datatype="Text" comment="">
			<UUID modifications="1" userName="Mike Duncan" accountName="Admin" timestamp="2021-01-12T13:39:19">259853F8-8A87-42E0-802E-F4CB8F16A9FE</UUID>
			<AutoEnter type="" prohibitModification="False"></AutoEnter>
			<Validation type="OnlyDuringDataEntry" allowOverride="True" notEmpty="False" unique="False" existing="False"></Validation>
			<Storage autoIndex="True" global="False" maxRepetitions="1">
				<LanguageReference name="English" id="21"></LanguageReference>
			</Storage>
		</Field>
		<Field DefaultStyle="" id="12" name="pluginName" fieldtype="Normal" datatype="Text" comment="">
			<UUID modifications="1" userName="Mike Duncan" accountName="Admin" timestamp="2021-01-12T13:39:19">6F7A179E-1322-4601-8C55-AA219D555722</UUID>
			<AutoEnter type="" prohibitModification="False"></AutoEnter>
			<Validation type="OnlyDuringDataEntry" allowOverride="True" notEmpty="False" unique="False" existing="False"></Validation>
			<Storage autoIndex="True" global="False" maxRepetitions="1">
				<LanguageReference name="English" id="21"></LanguageReference>
			</Storage>
		</Field>
	</ObjectList>
</FieldCatalog>
