tests/snapshots/tables/Admin API Tool/publickeys - ID 138.xml.snap
---
source: src/main.rs
expression: output_content
---
<FieldCatalog>
	<UUID modifications="12" userName="Mike Duncan" accountName="Admin" timestamp="2023-01-24T18:07:31">FF3B1883-F6E8-49DE-ADB6-5E8558DC8E00</UUID>
	<BaseTableReference id="138" name="publickeys"></BaseTableReference>
	<ObjectList membercount="14">
		<Field DefaultStyle="" id="6" name="ID" fieldtype="Normal" datatype="Number" comment="">
			<UUID modifications="1" userName="Mike Duncan" accountName="Admin" timestamp="2022-12-19T11:55:07">7300AF12-CF38-4141-998B-7B37E0227D44</UUID>
			<AutoEnter type="SerialNumber" prohibitModification="True">
				<SerialNumber increment="1" generate="OnCreation"></SerialNumber>
			</AutoEnter>
			<Validation type="OnlyDuringDataEntry" allowOverride="True" notEmpty="False" unique="True" existing="False"></Validation>
			<Storage global="False" maxRepetitions="1">
				<LanguageReference name="English" id="21"></LanguageReference>
			</Storage>
		</Field>
		<Field DefaultStyle="" id="7" name="ID_Server" fieldtype="Normal" datatype="Number" comment="">
			<UUID modifications="1" userName="Mike Duncan" accountName="Admin" timestamp="2022-12-19T11:55:07">3F518C90-DE58-44A0-949D-6A2AFC71F344</UUID>
			<AutoEnter type="" prohibitModification="False"></AutoEnter>
			<Validation type="OnlyDuringDataEntry" allowOverride="True" notEmpty="False" unique="False" existing="False"></Validation>
			<Storage global="False" maxRepetitions="1">
				<LanguageReference name="English" id="21"></LanguageReference>
			</Storage>
		</Field>
		<Field DefaultStyle="" id="8" name="name" fieldtype="Normal" datatype="Text" comment="">
			<UUID modifications="4" userName="Mike Duncan" accountName="Admin" timestamp="2023-01-24T16:59:56">E5455803-EA33-4A56-A70E-DB220055B231</UUID>
			<AutoEnter type="" prohibitModification="False"></AutoEnter>
			<Validation type="OnlyDuringDataEntry" allowOverride="True" notEmpty="False" unique="False" existing="False"></Validation>
			<Storage autoIndex="True" global="False" maxRepetitions="1">
				<LanguageReference name="English" id="21"></LanguageReference>
			</Storage>
		</Field>
		<Field DefaultStyle="" id="9" name="publicKey" fieldtype="Normal" datatype="Text" comment="">
			<UUID modifications="2" userName="Mike Duncan" accountName="Admin" timestamp="2022-12-19T11:55:44">5489F4E7-997E-420B-9CC8-16BAB9FD37F7</UUID>
			<AutoEnter type="" prohibitModification="False"></AutoEnter>
			<Validation type="OnlyDuringDataEntry" allowOverride="True" notEmpty="False" unique="False" existing="False"></Validation>
			<Storage autoIndex="True" global="False" maxRepetitions="1">
				<LanguageReference name="English" id="21"></LanguageReference>
			</Storage>
		</Field>
		<Field DefaultStyle="" id="10" name="dateAdded" fieldtype="Normal" datatype="Text" comment="">
			<UUID modifications="2" userName="Mike Duncan" accountName="Admin" timestamp="2022-12-19T11:55:51">D6E69213-7D46-48F1-9F99-279B0CB71B1A</UUID>
			<AutoEnter type="" prohibitModification="False"></AutoEnter>
			<Validation type="OnlyDuringDataEntry" allowOverride="True" notEmpty="False" unique="False" existing="False"></Validation>
			<Storage autoIndex="True" global="False" maxRepetitions="1">
				<LanguageReference name="English" id="21"></LanguageReference>
			</Storage>
		</Field>
		<Field DefaultStyle="" id="11" name="id_publickey" fieldtype="Normal" datatype="Text" comment="">
			<UUID modifications="2" userName="Mike Duncan" accountName="Admin" timestamp="2022-12-19T11:56:05">F83F70C4-F699-4290-B0BF-81045CA1041A</UUID>
			<AutoEnter type="" prohibitModification="False"></AutoEnter>
			<Validation type="OnlyDuringDataEntry" allowOverride="True" notEmpty="False" unique="False" existing="False"></Validation>
			<Storage autoIndex="True" global="False" maxRepetitions="1">
				<LanguageReference name="English" id="21"></LanguageReference>
			</Storage>
		</Field>
		<Field DefaultStyle="" id="12" name="lastAccessed" fieldtype="Normal" datatype="Text" comment="">
			<UUID modifications="2" userName="Mike Duncan" accountName="Admin" timestamp="2022-12-19T11:55:56">05270D7D-E416-4191-B180-9B4E476288CE</UUID>
			<AutoEnter type="" prohibitModification="False"></AutoEnter>
			<Validation type="OnlyDuringDataEntry" allowOverride="True" notEmpty="False" unique="False" existing="False"></Validation>
			<Storage autoIndex="True" global="False" maxRepetitions="1">
				<LanguageReference name="English" id="21"></LanguageReference>
			</Storage>
		</Field>
		<Field DefaultStyle="" id="13" name="privateKey" fieldtype="Normal" datatype="Text" comment="">
			<UUID modifications="1" userName="Mike Duncan" accountName="Admin" timestamp="2023-01-24T15:23:35">8C505225-41E7-4966-B9E9-9764E452F4DE</UUID>
			<AutoEnter type="" prohibitModification="False"></AutoEnter>
			<Validation type="OnlyDuringDataEntry" allowOverride="True" notEmpty="False" unique="False" existing="False"></Validation>
			<Storage autoIndex="True" global="False" maxRepetitions="1">
				<LanguageReference name="English" id="21"></LanguageReference>
			</Storage>
		</Field>
		<Field DefaultStyle="" id="14" name="privateKey_r" fieldtype="Normal" datatype="Binary" comment="">
			<UUID modifications="0" userName="Mike Duncan" accountName="Admin" timestamp="2023-01-24T15:23:18">4B56F8C7-A529-4A87-88AD-E92F7948AC5C</UUID>
			<AutoEnter type="" prohibitModification="False"></AutoEnter>
			<Validation type="OnlyDuringDataEntry" allowOverride="True" notEmpty="False" unique="False" existing="False"></Validation>
			<Storage global="False" maxRepetitions="1"></Storage>
		</Field>
		<Field DefaultStyle="" id="15" name="publicKey_r" fieldtype="Normal" datatype="Binary" comment="">
			<UUID modifications="0" userName="Mike Duncan" accountName="Admin" timestamp="2023-01-24T15:23:24">FEE16819-7149-4AEC-A0D5-3F09F47535F7</UUID>
			<AutoEnter type="" prohibitModification="False"></AutoEnter>
			<Validation type="OnlyDuringDataEntry" allowOverride="True" notEmpty="False" unique="False" existing="False"></Validation>
			<Storage global="False" maxRepetitions="1"></Storage>
		</Field>
		<Field DefaultStyle="" id="16" name="Expires_days" fieldtype="Normal" datatype="Text" comment="">
			<UUID modifications="1" userName="Mike Duncan" accountName="Admin" timestamp="2023-01-24T15:23:59">4D7C1C8C-9FED-4267-B8C1-86C1C7FD3693</UUID>
			<AutoEnter type="" prohibitModification="False"></AutoEnter>
			<Validation type="OnlyDuringDataEntry" allowOverride="True" notEmpty="False" unique="False" existing="False"></Validation>
			<Storage autoIndex="True" global="False" maxRepetitions="1">
				<LanguageReference name="English" id="21"></LanguageReference>
			</Storage>
		</Field>
		<Field DefaultStyle="" id="17" name="jwt" fieldtype="Normal" datatype="Text" comment="">
			<UUID modifications="1" userName="Mike Duncan" accountName="Admin" timestamp="2023-01-24T15:24:10">169CDAA9-9FB1-4851-9E58-9B6F77BE4960</UUID>
			<AutoEnter type="" prohibitModification="False"></AutoEnter>
			<Validation type="OnlyDuringDataEntry" allowOverride="True" notEmpty="False" unique="False" existing="False"></Validation>
			<Storage autoIndex="True" global="False" maxRepetitions="1">
				<LanguageReference name="English" id="21"></LanguageReference>
			</Storage>
		</Field>
		<Field DefaultStyle="" id="18" name="Expires_m" fieldtype="Normal" datatype="Timestamp" comment="">
			<UUID modifications="1" userName="Mike Duncan" accountName="Admin" timestamp="2023-01-24T15:33:59">EF2C90F9-BD54-45F8-9808-6FE10283367C</UUID>
			<AutoEnter type="" prohibitModification="False"></AutoEnter>
			<Validation type="OnlyDuringDataEntry" allowOverride="True" notEmpty="False" unique="False" existing="False"></Validation>
			<Storage autoIndex="True" global="False" maxRepetitions="1">
				<LanguageReference name="English" id="21"></LanguageReference>
			</Storage>
		</Field>
		<Field DefaultStyle="" id="19" name="zz_sync" fieldtype="Normal" datatype="Text" comment="">
			<UUID modifications="1" userName="Mike Duncan" accountName="Admin" timestamp="2023-01-24T18:07:31">BE3C10BC-B548-448C-9618-C45CA6C16039</UUID>
			<AutoEnter type="" prohibitModification="False"></AutoEnter>
			<Validation type="OnlyDuringDataEntry" allowOverride="True" notEmpty="False" unique="False" existing="False"></Validation>
			<Storage autoIndex="True" global="False" maxRepetitions="1">
				<LanguageReference name="English" id="21"></LanguageReference>
			</Storage>
		</Field>
	</ObjectList>
</FieldCatalog>
