tests/snapshots/tables/Admin API Tool/wpe - ID 134.xml.snap
---
source: src/main.rs
expression: output_content
---
<FieldCatalog>
	<UUID modifications="2" userName="Malte Bastian" accountName="Admin" timestamp="2024-02-18T17:38:30">390AB132-EA22-4942-8860-FFD171297DD3</UUID>
	<BaseTableReference id="134" name="wpe"></BaseTableReference>
	<ObjectList membercount="7">
		<Field DefaultStyle="" id="1" name="ID" fieldtype="Normal" datatype="Number" comment="">
			<UUID modifications="2" userName="Malte Bastian" accountName="Admin" timestamp="2024-02-18T17:38:30">3E920896-9BC8-4E96-BF89-D16356ABFD86</UUID>
			<AutoEnter type="SerialNumber" prohibitModification="True">
				<SerialNumber increment="1" generate="OnCreation"></SerialNumber>
			</AutoEnter>
			<Validation type="OnlyDuringDataEntry" allowOverride="True" notEmpty="False" unique="True" existing="False"></Validation>
			<Storage global="False" maxRepetitions="1">
				<LanguageReference name="English" id="21"></LanguageReference>
			</Storage>
		</Field>
		<Field DefaultStyle="" id="2" name="ID_Server" fieldtype="Normal" datatype="Number" comment="">
			<UUID modifications="2" userName="Malte Bastian" accountName="Admin" timestamp="2024-02-18T17:38:30">1D7B1890-216A-453F-A964-C5EAABA408B1</UUID>
			<AutoEnter type="" prohibitModification="False"></AutoEnter>
			<Validation type="OnlyDuringDataEntry" allowOverride="True" notEmpty="False" unique="False" existing="False"></Validation>
			<Storage global="False" maxRepetitions="1">
				<LanguageReference name="English" id="21"></LanguageReference>
			</Storage>
		</Field>
		<Field DefaultStyle="" id="4" name="connections" fieldtype="Normal" datatype="Text" comment="">
			<UUID modifications="3" userName="Malte Bastian" accountName="Admin" timestamp="2024-02-18T17:38:30">6A789084-37E1-4574-BC7F-6EFF7D8D9286</UUID>
			<AutoEnter type="" prohibitModification="False"></AutoEnter>
			<Validation type="OnlyDuringDataEntry" allowOverride="True" notEmpty="False" unique="False" existing="False"></Validation>
			<Storage autoIndex="True" global="False" maxRepetitions="1">
				<LanguageReference name="English" id="21"></LanguageReference>
			</Storage>
		</Field>
		<Field DefaultStyle="" id="6" name="id_wpe" fieldtype="Normal" datatype="Text" comment="">
			<UUID modifications="3" userName="Malte Bastian" accountName="Admin" timestamp="2024-02-18T17:38:30">B93E9F25-0011-494A-9E5A-03DE44285ECB</UUID>
			<AutoEnter type="" prohibitModification="False"></AutoEnter>
			<Validation type="OnlyDuringDataEntry" allowOverride="True" notEmpty="False" unique="False" existing="False"></Validation>
			<Storage autoIndex="True" global="False" maxRepetitions="1">
				<LanguageReference name="English" id="21"></LanguageReference>
			</Storage>
		</Field>
		<Field DefaultStyle="" id="10" name="enabled" fieldtype="Normal" datatype="Text" comment="">
			<UUID modifications="3" userName="Malte Bastian" accountName="Admin" timestamp="2024-02-18T17:38:30">F1F9F636-7D10-4056-970D-A359AB0E29CC</UUID>
			<AutoEnter type="" prohibitModification="False"></AutoEnter>
			<Validation type="OnlyDuringDataEntry" allowOverride="True" notEmpty="False" unique="False" existing="False"></Validation>
			<Storage autoIndex="True" global="False" maxRepetitions="1">
				<LanguageReference name="English" id="21"></LanguageReference>
			</Storage>
		</Field>
		<Field DefaultStyle="" id="11" name="host" fieldtype="Normal" datatype="Text" comment="">
			<UUID modifications="3" userName="Malte Bastian" accountName="Admin" timestamp="2024-02-18T17:38:30">562EBD35-9C50-462D-83AD-34C3EF9DEC4B</UUID>
			<AutoEnter type="" prohibitModification="False"></AutoEnter>
			<Validation type="OnlyDuringDataEntry" allowOverride="True" notEmpty="False" unique="False" existing="False"></Validation>
			<Storage autoIndex="True" global="False" maxRepetitions="1">
				<LanguageReference name="English" id="21"></LanguageReference>
			</Storage>
		</Field>
		<Field DefaultStyle="" id="13" name="ip" fieldtype="Normal" datatype="Text" comment="">
			<UUID modifications="4" userName="Malte Bastian" accountName="Admin" timestamp="2024-02-18T17:38:30">BCE3F63E-68CE-4F75-AAFB-47E48B7C5FBC</UUID>
			<AutoEnter type="" prohibitModification="False"></AutoEnter>
			<Validation type="OnlyDuringDataEntry" allowOverride="True" notEmpty="False" unique="False" existing="False"></Validation>
			<Storage autoIndex="True" global="False" maxRepetitions="1">
				<LanguageReference name="English" id="21"></LanguageReference>
			</Storage>
		</Field>
	</ObjectList>
</FieldCatalog>
